<resources>
    <string name="app_name">Tawsila</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tawsila</string>
    <string name="nav_header_subtitle">gp.batch56@helwan.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">في حالة إضافة features جديدة</string>

    <string name="menu_home">الرئيسية</string>
    <string name="menu_settings">الإعدادات</string>
    <string name="menu_add_new_route">إضافة طريق جديد</string>
    <string name="menu_contact_us">تواصل معنا</string>
    <string name="menu_about">من نحن</string>
    <string name="account">حسابى</string>
    <string name="off">OFF</string>

    <string name="mode">الوضع الليلى</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_select_path">SelectPath</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Strings related to login -->
    <string name="prompt_email">البريد الإلكترونى</string>
    <string name="prompt_password">كلمة المرور</string>
    <string name="dnt_have">لا تمتلك حساب؟</string>
    <string name="sign">إنشاء حساب</string>
    <string name="log">تسجيل دخول</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings related to signup -->
    <string name="email">البريد الإلكترونى</string>
    <string name="pass">كلمة المرور</string>
    <string name="phone">رقم الهاتف</string>
    <string name="fname">الاسم الاول</string>
    <string name="lname">الاسم الثانى</string>
    <!-- Strings related to ADD new route -->
    <string name="from">من</string>
    <string name="to">الى</string>
    <string name="no.">No. of Transportations</string>
    <string name="transport">وسيلة المواصلات</string>
    <string name="bus">أتوبيس</string>
    <string name="mic_bus">ميكروباص</string>
    <string name="cost">السعر</string>
    <string name="submit">أرسل اقتراحك</string>
    <string name="verify">سيتم مراجعة طلبك</string>
    <string name="verification">Verification Code Sent</string>
    <string name="AvailableStopsAreUpdated">الأماكن المتوفرة محدثة أولا بأول</string>
    <string name="CheckInternetConnection">نرجو التحقق من جودة النت لديكم</string>
    <string name="PathsSortedAccordingToDistance">سيتم الترتيب طبقا للمسافة</string>
    <string name="PathsSortedAccordingToCost">سيتم الترتيب طبقا للسعر</string>
    <string name="LocationAndDestinationMustBeSpecified">يجب تحديد نقطة للانطلاق وكذلك نقطة انتهاء أولا</string>
    <string name="PleaseChooseTwoAvailableStops">عفوا يجب اختيار نقطتين متوفرتين لدينا</string>
    <string name="NotAvailable">-</string>
    <string name="NoAvailablePathsToBePresented">عذرا، لا يوجد طريق متوفر</string>
    <string name="GoingToGoogleMaps">جاري الذهاب إلي جوجل</string>
    <string name="we_will_checked">جاري التحقق</string>
    <string name="distance">المسافة</string>
    <string name="paths_sorted_by">الطرق المتاحة مرتبة حسب:</string>
    <string name="Location">نقطة الانطلاق</string>
    <string name="Destination">نقطة الانتهاء</string>
    <string name="search_for_paths">بحث</string>
    <string name="OFF">OFF</string>
    <string name="ON">ON</string>
    <string name="Stop">Stop</string>
    <string name="Continue">Continue</string>
    <string name="NoPathsToSort">لا يوجد طرق لترتيبهم</string>
    <string name="SuccessfulRegistration">تم تسجيل الدخول بنجاح</string>
    <string name="EnterCorrectEmail">يرجي اضافة ايميل صحيح</string>
    <string name="EnterCorrectPassword">يرجي اضافة كلمة مرور صحيحة</string>
    <string name="VerificationEmailHasBeenSent">تم ارسال رسالة تحقق لايميلك</string>
    <string name="SuccessfulLogin">تم تسجيل الدخول بنجاح</string>
    <string name="YourLocationHasBeenChanged">مكانك تغير</string>
    <string name="YouReachedYourDestination">انتهت الرحلة</string>
    <string name="PleaseKeepLocationPermission">يرجي ترك خاصية استخدام المكان</string>
    <string name="SearchingForPaths">جاري البحث عن الطرق</string>
    <string name="Login">تسجيل الدخول</string>
    <string name="PleaseWait">نرجو الانتظار</string>
    <string name="Error">هناك مشكلة</string>
    <string name="ThisAccountIsNotVerified">هذا الحساب لم يتم التحقق منه بعد</string>
    <string name="InCorrectEmailOrPassword">خطأ في الايميل أو كلمة المرور</string>
    <string name="Registration">تسجيل حساب</string>
    <string name="Sec">ثانية</string>
    <string name="EnableGpsMessage">يبدو إنك غير مفعل امكانية استخدام مكانك، هل يمكنك تفعيلها ؟</string>
    <string name="Yes">نعم</string>
    <string name="No">لأ</string>


    <string name="return_to_activity">متابعة السير</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">الإعدادات</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">الغاء تحديثات المكان</string>

    <string name="location_updated">Location Updated: %1$s</string>





    <!-- Strings related to spinner -->
    <string-array name="transportations">
        <item>ميكروباص</item>
        <item>أتوبيس</item>
        <item>مترو</item>
    </string-array>


    <!-- Strings related to spinner -->
    <string-array name="dislikeCause">
        <item>الطريق/المواصلة سيئة</item>
        <item>الطريق/المواصلة غير متوفرين</item>
    </string-array>


    <string name="title_activity_live_location">LiveLocation</string>
    <string name="current_location_is">أنت الآن في</string>
    <string name="time">الوقت</string>
    <string name="PathsSortedAccordingToTime">سيتم الترتيب طبقا للوقت</string>
    <string name="AutoCompleteTextViewWarning">لا يمكن ترك أحد نقطتي الانطلاق أو الانتهاء فارغة</string>
    <string name="TryAgain">هناك مشكلة، نرجو اعادة المحاولة</string>
    <string name="GoingToMap">جاري الذهاب إلي الخريطة</string>
    <string name="LogoutSuccessful">تم تسجيل الخروج بنجاح</string>
    <string name="logOut">Log Out</string>

    <string name="WhatsYourLocation">تم استقبال اختياركم بنجاح،  |   ما هي نقطة الانطلاق التي تريدها</string>
    <string name="WhatsYourDestination">تم استقبال اختياركم بنجاح،  |   ما هي نقطة الانتهاء التي تريد الوصول إليها</string>
    <string name="SortingCriteria">تم استقبال اختياركم بنجاح، |   ما هي طريقة ترتيب الطرق التي تريدونها | الوقت | أمْ | المسافة | أمْ | التكلفة ؟</string>
    <string name="SortingCriteriaSecondListen">أيٌ طريقة ترتيب تريد | الوقت | أمْ | المسافة | أمْ | التكلفة ؟</string>
    <string name="NoPathsFound">لا يوجد طريق متوفر</string>
    <string name="BadInternetConnection">نرجو مراجعة جودة الانترنت لديكم</string>
    <string name="SearchingForAvaliablePaths">جاري البحث عن جميع الطرق المتوفرة، نرجو منكم الانتظار قليلا وسَتَظهَرُ النتائج مرتبة كما اختَرْتم</string>


    <string name="ConnectionName">اسم الخط</string>
    <string name="OptionalPathCost">اختيارى</string>
    <string name="acceptReview">تم</string>
    <string name="rejectReview">الغاء</string>
    <string name="PleaseLogInFirst">نرجو تسجيل الدخول أولا</string>
    <string name="ShareLiveLocation">مشاركة الموقع الحالى</string>


</resources>