<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_add_new_route"
            android:icon="@drawable/ic_nav_add_new_route"
            android:title="@string/menu_add_new_route" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_current_location"
            android:title="@string/ShareLiveLocation" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_nav_about"
            android:title="@string/menu_about" />

    </group>
</menu>