<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/container"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/sub_background">


    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:paddingTop="15dp"
        android:text="@string/sign"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/FnameET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="First Name"
            android:textColor="@color/gray"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/LnameET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/lname"
            android:textColor="@color/gray"
            android:textStyle="bold"/>
    </LinearLayout>

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColor="@color/gray"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/passET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="numberPassword"
        android:hint="@string/pass"
        android:textColor="@color/gray"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/phoneET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone"
        android:textColor="@color/gray"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/sign_btn"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="15dp"
        android:text="@string/sign" />
</LinearLayout>