<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragments.HomeFragment"
        android:id="@+id/home_fragment">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/icon"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/tv_location"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="32dp"
            android:background="@drawable/button_background_red1"
            android:gravity="center"
            android:hint="@string/Location"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textStyle="bold"
            android:textSize="32dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_destination"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4">

        </AutoCompleteTextView>

        <AutoCompleteTextView
            android:id="@+id/tv_destination"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="32dp"
            android:gravity="center"
            android:hint="@string/Destination"
            android:textColorHint="@color/gray"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            android:background="@drawable/button_background_red1">

        </AutoCompleteTextView>

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_for_paths"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.36" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="guideline5"
            tools:layout_editor_absoluteY="176dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <RadioGroup
            android:id="@+id/radioGroup_homeFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/searchBtn"
            app:layout_constraintTop_toBottomOf="@+id/tv_destination">

            <RadioButton
                android:id="@+id/costRB_homeFragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:background="@drawable/button_background_red2"
                android:padding="4dp"
                android:text="@string/cost"
                android:textAlignment="center"
                android:textColor="@color/dark_red"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/distanceRB_homeFragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/button_background_red2"
                android:padding="4dp"
                android:text="@string/distance"
                android:textAlignment="center"
                android:textColor="@color/dark_red"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/timeRB_homeFragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:background="@drawable/button_background_red2"
                android:padding="4dp"
                android:text="@string/time"
                android:textAlignment="center"
                android:textColor="@color/dark_red"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>